<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/titletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <Button
        android:id="@+id/titlebutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titletxt"
        android:text="@string/Title" />

    <TextView
        android:id="@+id/desctxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlebutton"
        android:layout_centerInParent="true"
        android:gravity="center" />

    <Button
        android:id="@+id/descbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desctxt"
        android:text="@string/Description" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descbutton"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/logobutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:text="@string/Logo" />

    <TextView
        android:id="@+id/imagesrctext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logobutton"
        android:gravity="center" />

    <Button
        android:id="@+id/imagesrcbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagesrctext"
        android:text="@string/LogoSrc" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/TestConn"
        android:id="@+id/testConnect"
        android:layout_below="@+id/imagesrcbutton" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/testConnect"
        android:scrollbars = "vertical"
        android:scrollbarStyle="insideInset"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/conntest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ScrollView" />
    </ScrollView>


</RelativeLayout>